<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/marginSmall"
    tools:context=".ui.location.LocationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/marginSmall"
        app:cardCornerRadius="@dimen/border_radius"
        app:layout_constraintBottom_toTopOf="@+id/leftBtn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginSmall"
                android:text="@string/lbl_btn_order"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/textM"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/map"
                app:layout_constraintTop_toTopOf="@id/map" />

            <TextView
                android:id="@+id/directionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_location_zoom"
                android:textColor="#66FFFFFF"
                android:textSize="@dimen/textM"
                app:layout_constraintStart_toStartOf="@id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <ImageView
                android:id="@+id/rightMapBtn"
                android:layout_width="@dimen/button_map_size"
                android:layout_height="@dimen/button_map_size"
                android:layout_margin="@dimen/marginSmall"
                android:background="@drawable/bg_button_right"
                android:padding="@dimen/marginSmall"
                android:src="@drawable/ic_btn_location"
                app:layout_constraintBottom_toBottomOf="@id/map"
                app:layout_constraintEnd_toEndOf="@id/map" />

            <ImageView
                android:id="@+id/leftMapBtn"
                android:layout_width="@dimen/button_map_size"
                android:layout_height="@dimen/button_map_size"
                android:background="@drawable/bg_button_left"
                android:padding="@dimen/marginSmall"
                android:src="@drawable/ic_home"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="@id/rightMapBtn"
                app:layout_constraintEnd_toStartOf="@id/rightMapBtn"
                app:layout_constraintTop_toTopOf="@id/rightMapBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/leftBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginSmall"
        android:background="@drawable/bg_choose_price"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/marginSmall"
        android:paddingBottom="@dimen/marginSmall"
        app:layout_constraintBottom_toTopOf="@id/proceedBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:id="@+id/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_fuel_regular"
            android:textColor="@color/grey80" />

        <TextView
            android:id="@+id/regularPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_fuel_regular_price"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#80808080"
        app:layout_constraintBottom_toBottomOf="@id/leftBtn"
        app:layout_constraintEnd_toStartOf="@id/rightBtn"
        app:layout_constraintStart_toEndOf="@id/leftBtn"
        app:layout_constraintTop_toTopOf="@id/leftBtn" />

    <LinearLayout
        android:id="@+id/rightBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_choose_price"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/leftBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/leftBtn"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:id="@+id/premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_fuel_premium"
            android:textColor="@color/grey80" />

        <TextView
            android:id="@+id/premiumPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_fuel_premium_price"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_next"
        android:gravity="center"
        android:minHeight="@dimen/marginXXLarge"
        android:text="@string/lbl_btn_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textL"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>